kuber/lesson5/src/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "public"
  rules:
    - host: test-site.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-app-front
              port:
                name: front-svc
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: web-app-back
              port:
                name: back-svc


---
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 192.168.0.215
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
